Clarify data storage

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             </svg>
           </div>
           <h3>Data stays in LegalServer</h3>
-          <p>All case data remains securely inside your LegalServer instance. We never store or access your client information.</p>
+          <p>LegalServer stays the permanent system of record.</p>
         </div>
 
         <!-- AI Privacy -->
