remove cents; don't promise 24/7 phone support

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
           <h3>Starter</h3>
           <p class="user-range">1-10 users</p>
           <div class="price-original">$149 + $11/user</div>
-          <div class="price">$111.75 + $8.25/user</div>
+          <div class="price">$111 + $8/user</div>
           <p class="discount">25% off — Sign up by Dec 15th<br/>Full-year commitment required</p>
           <ul>
             <li>1-click templates</li>
@@ -405,7 +405,7 @@
           <h3>Growth</h3>
           <p class="user-range">11-50 users</p>
           <div class="price-original">$149 + $9/user</div>
-          <div class="price">$111.75 + $6.75/user</div>
+          <div class="price">$111 + $6/user</div>
           <p class="discount">25% off — Sign up by Dec 15th<br/>Full-year commitment required</p>
           <ul>
             <li>Everything in Starter</li>
@@ -419,7 +419,7 @@
           <h3>Professional</h3>
           <p class="user-range">50-200 users</p>
           <div class="price-original">$299 + $7/user</div>
-          <div class="price">$224.25 + $5.25/user</div>
+          <div class="price">$224 + $5/user</div>
           <p class="discount">25% off — Sign up by Dec 15th<br/>Full-year commitment required</p>
           <ul>
             <li>Everything in Growth</li>
@@ -439,7 +439,7 @@
             <li>Everything in Professional</li>
             <li>Customized workflows</li>
             <li>Multi-office support</li>
-            <li>24/7 phone support</li>
+            <li>Dedicated support</li>
           </ul>
         </div>
       </div>
